--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Login</title>
+    <style>
+    </style>
 </head>
-<body>
-    <div class="container mt-4">
-        <div class="card mt-4" style="width:50%">
+<body style="background-image:url(../media/background.jpg);">
+    <div class="container m-5">
+        <div class="card bg-primary text-white" style="width:50%">
             <div class="card-header">
-                <h6>Login</h6>
+                <h5>Login</h5>
             </div>
-            <div class="card-body">
+            <div class="card-body bg-info ">
                 {{#if message}}
                     <h6 class="alert {{color}} mt-4">
                         {{message}}
@@ -21,8 +23,8 @@
                 {{/if}}
                 <form action="auth/login" method="post">
                     <label for="email">Email : </label>
-                    <input type="email" name="email" id="email" class="form-control" >
-                    <label for="password">Password</label>
+                    <input type="email" name="email" id="email" class="form-control" ><br>
+                    <label for="password">Password : </label>
                     <input type="password" name="password" id="password" class="form-control"><br >
                     <input type="submit" name="submit" id="submit" class="btn btn-primary" value="Submit"><br>
                 </form>
