--- a/views/viewStudents.hbs
+++ b/views/viewStudents.hbs
@@ -7,29 +7,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>List of Students</title>
 </head>
-<body>
+<body class="">
     <div class="container">
         {{#if students}}
         <h6 class="alert {{color}} mt-4">
             {{students}}
         </h6>
         {{/if}}
-        <div class="mt-4" style="width:50%">
+        <div class="p-3 bg-info text-white" style="width:50%">
             <form name="myForm" id="myForm" action="/auth/addStudent" class="form" method="post" >
-                <label for="student_id">Student ID</label>
-                <input type="text" name="student_id" id="student_id" class="form-control" value="{{stud.student_id}}" readonly>
-                <label for="course_name">Course</label>
+                <label for="student_id">Student ID :</label>
+                <input type="text" name="student_id" id="student_id" class="form-control" value="{{stud.student_id}}" placeholder="This field cannot be modified" readonly>
+                <label for="course_name">Course :</label>
                 <select name="course" id="course" class="form-control" required>
+                    <option value="">Please select course</option>
                     <option value="1">Front-end Development</option>
                     <option value="2">Back-end Development</option>
                     <option value="3">Fullstack Development</option>
                 </select>
-                <label for="first_name">First Name</label>
-                <input type="text" name="first_name" id="first_name" class="form-control" value="{{stud.first_name}}" required>
-                <label for="last_name">Last Name</label>
-                <input type="text" name="last_name" id="last_name" class="form-control" value="{{stud.last_name}}" required>
-                <label for="email">Email</label>
-                <input type="text" name="email" id="email" class="form-control" value="{{stud.email}}" required><br>
+                <label for="first_name">First Name :</label>
+                <input type="text" name="first_name" id="first_name" class="form-control" value="{{stud.first_name}}" required placeholder="Enter first name">
+                <label for="last_name">Last Name :</label>
+                <input type="text" name="last_name" id="last_name" class="form-control" value="{{stud.last_name}}" required placeholder="Enter last name">
+                <label for="email">Email :</label>
+                <input type="text" name="email" id="email" class="form-control" value="{{stud.email}}" required placeholder="Enter email"><br>
                 <button type="submit" class="btn btn-primary" id="add" name="add">Submit</button>
             </form>
         </div>
@@ -44,7 +45,7 @@
             </h6>
         {{/if}}
         {{#if data}}
-        <table class="table text-center">
+        <table class="table table-info table-hover text-center">
             <thead>
                 <tr>
                     <th>Student ID</th>
