--- a/views/viewStudents.hbs
+++ b/views/viewStudents.hbs
@@ -14,7 +14,7 @@
             {{students}}
         </h6>
         {{/if}}
-        <div class="p-3 bg-info text-white" style="width:50%">
+        <div class="p-3 bg-info" style="width:50%">
             <form name="myForm" id="myForm" action="/auth/addStudent" class="form" method="post" >
                 <label for="student_id">Student ID :</label>
                 <input type="text" name="student_id" id="student_id" class="form-control" value="{{stud.student_id}}" placeholder="This field cannot be modified" readonly>
